grammar.js
        source_file: ($) => repeat($._declaration),

        // `#` is a line comment EXCEPT when immediately followed by `[` (a decorator)
        _declaration: ($) =>
            choice(
                $.use_declaration,
                $.forward_declaration,
                $.type_alias_declaration,
                $.record_declaration,
                $.union_declaration,
                $.tag_declaration,
                $.value_declaration,
                $.variable_declaration,
                $.function_declaration,
                $.test_declaration,
                $.comptime_if_declaration,
                $.comptime_expression_statement,
            ),

        // pub / ext visibility and linkage flags, any order, zero or more
        value_declaration: ($) =>
            seq(repeat($.decorator), optional($.modifiers), $._value_binding),

        // [`decorator`...] [flags] var name [: type] [= expr];
        _value_binding: ($) =>
            seq(
                "val",
                field("name", $.identifier),
                optional(seq(":", field("type", $._type))),
                optional(seq("=", field("value", $._expression))),
                ";",
            ),

        function_declaration: ($) =>
            seq(
                repeat($.decorator),
                optional($.modifiers),
                "fun",
                field("name", $.identifier),
                optional($.type_parameters),
                $.parameter_list,
                optional(field("return_type", $._type)),
                choice($.block, ";"),
            ),

        parameter_list: ($) =>
            seq(
                "(",
                optional(
                    choice(
                        // C-style variadic only: fun f(...)
                        $.variadic_parameter,
                        // comptime pack only: fun f(va: ...)
                        $.pack_parameter,
                        seq(
                            sep1($.parameter, ","),
                            optional(
                                seq(
                                    ",",
                                    // trailing C-style ... or named pack va: ...
                                    optional(choice($.variadic_parameter, $.pack_parameter)),
                                ),
                            ),
                        ),
                    ),
                ),
                ")",
            ),

        // a leading `$` marks a comptime value parameter
        parameter: ($) =>
            seq(
                optional(field("comptime", "$")),
                field("name", $.identifier),
                ":",
                field("type", $._type),
            ),

        // C-style variadic marker (trailing ...)
        variadic_parameter: ($) => "...",

        // comptime variadic pack parameter: name: ...
        block: ($) => seq("{", repeat($._statement), "}"),

        _statement: ($) =>
            choice(
                alias($.local_value_declaration, $.value_declaration),
                alias($.local_variable_declaration, $.variable_declaration),
                $.if_statement,
                $.for_statement,
                $.return_statement,
                $.break_statement,
                $.continue_statement,
                $.defer_statement,
                $.asm_statement,
                $.comptime_if_statement,
                $.comptime_each_statement,
                $.comptime_expression_statement,
                $.block,
                $.expression_statement,
            ),

        expression_statement: ($) => prec.right(-1, seq($._expression, ";")),

        // if (cond) { body } [or (cond) { body }]* [or { body }]
        if_statement: ($) =>
            seq(
                "if",
                "(",
                field("condition", $._expression),
                ")",
                $.block,
                repeat($.or_clause),
            ),

        return_statement: ($) => seq("ret", optional($._expression), ";"),

        // `brk;` and `cnt;` are statements only when followed by `;`; the
        // precedence takes the keyword over an identifier named brk or cnt
        _expression: ($) =>
            choice(
                $.assignment_expression,
                $.binary_expression,
                $.unary_expression,
                $.sel_expression,
                $.cast_expression,
                $.secret_strip_expression,
                $.typed_literal,
                $.tag_literal,
                $.array_literal,
                $.record_literal,
                $.union_literal,
                $.comptime_expression,
                $._postfix_expression,
            ),

        // call, index, field access, projection, and pack spread form a single
        // left-recursive chain so the LR parser keeps `[ ( . .[` as valid shifts.
        _postfix_expression: ($) =>
            choice(
                $.call_expression,
                $.index_expression,
                $.field_expression,
                $.projection_expression,
                $.pack_spread_expression,
                $.parenthesized_expression,
                $._primary_expression,
            ),

        assignment_expression: ($) =>
            prec.right(
                PREC.ASSIGNMENT,
                seq(
                    field("left", $._expression),
                    "=",
                    field("right", $._expression),
                ),
            ),

        binary_expression: ($) => {
            const table = [
                [PREC.LOGICAL_OR, "||"],
                [PREC.LOGICAL_AND, "&&"],
                [PREC.BITWISE_OR, "|"],
                [PREC.BITWISE_XOR, "^"],
                [PREC.BITWISE_AND, "&"],
                [PREC.EQUALITY, choice("==", "!=")],
                [PREC.COMPARISON, choice("<", ">", "<=", ">=")],
                [PREC.SHIFT, choice("<<", ">>")],
                [PREC.TERM, choice("+", "-")],
                [PREC.FACTOR, choice("*", "/", "%")],
            ];

            return choice(
                ...table.map(([prec_level, operator]) =>
                    prec.left(
                        prec_level,
                        seq(
                            field("left", $._expression),
                            field("operator", operator),
                            field("right", $._expression),
                        ),
                    ),
                ),
            );
        },

        // -x, !x, ~x, ?x (address-of), @x (dereference)
        unary_expression: ($) =>
            prec(
                PREC.UNARY,
                seq(
                    field("operator", choice("-", "!", "~", "?", "@")),
                    field("operand", $._expression),
                ),
            ),

        // expr::type (value conversion) or expr:~type (bit reinterpret)
        cast_expression: ($) =>
            prec.left(
                PREC.POSTFIX,
                seq(
                    field("value", $._expression),
                    field("operator", choice("::", ":~")),
                    field("type", $._type),
                ),
            ),

        // sel place.case / sel place.[case] — case test; binds tighter than
        // every binary operator and looser than postfix
        sel_expression: ($) =>
            prec(PREC.UNARY, seq("sel", field("operand", $._expression))),

        // expr:>type declassifies a secret, always naming its public result type
        secret_strip_expression: ($) =>
            prec.left(
                PREC.POSTFIX,
                seq(
                    field("value", $._expression),
                    field("operator", ":>"),
                    field("type", $._type),
                ),
            ),

        // expr(args) or expr[types](args); `x[a, b](args)` also reads as a
        // range index called, and like the compiler the generic call wins
        call_expression: ($) =>
            prec.left(
                PREC.POSTFIX,
                seq(
                    field("function", $._postfix_expression),
                    optional(prec.dynamic(1, $.type_arguments)),
                    $.argument_list,
                ),
            ),

        type_arguments: ($) =>
            seq("[", optional(seq(sep1($._type, ","), optional(","))), "]"),

        argument_list: ($) =>
            seq(
                "(",
                optional(seq(sep1($._expression, ","), optional(","))),
                ")",
            ),

        // expr[index] or expr[index, count], a range of count elements
        index_expression: ($) =>
            prec.left(
                PREC.POSTFIX,
                seq(
                    field("object", $._postfix_expression),
                    "[",
                    field("index", $._expression),
                    optional(seq(",", field("count", $._expression))),
                    "]",
                ),
            ),

        // expr.field
        field_expression: ($) =>
            prec.left(
                PREC.POSTFIX,
                seq(
                    field("object", $._postfix_expression),
                    ".",
                    field("field", $.identifier),
                ),
            ),

        // v.[f] — comptime field projection; `.` then `[` disambiguates from member
        projection_expression: ($) =>
            prec.left(
                PREC.POSTFIX,
                seq(
                    field("object", $._postfix_expression),
                    ".",
                    "[",
                    field("index", $._expression),
                    "]",
                ),
            ),

        // expr... — pack spread; used as the trailing argument in a pack-tailed call
        parenthesized_expression: ($) => seq("(", $._expression, ")"),

        // Name{...}, module.Name{...}, or Name[T]{...}
        typed_literal: ($) =>
            prec.dynamic(
                1,
                seq(
                    field("type", choice($.type_identifier, $.generic_type)),
                    $.initializer_list,
                ),
            ),

        // Type.case{...}, Type[T].case{...}, or T.[descriptor]{...}
        initializer_list: ($) =>
            seq(
                "{",
                optional(sep1($.initializer_field, ",")),
                optional(","),
                "}",
            ),

        initializer_field: ($) =>
            choice(
                seq(
                    field("name", choice($.identifier, $._keyword_identifier)),
                    ":",
                    field("value", $._expression),
                ),
                field("value", $._expression),
            ),

        _keyword_identifier: ($) =>
            prec.dynamic(
                -1,
                alias(choice("rec", "uni", "sel", "brk", "cnt"), $.identifier),
            ),

        _type: ($) =>
            choice(
                $.primitive_type,
                $.secret_type,
                $.pointer_type,
                $.array_type,
                $.function_type,
                $.generic_type,
                $.record_type,
                $.union_type,
                $.comptime_type,
                $.type_identifier,
            ),

        // $pointee_of(T) / $discriminant_of(T) — comptime type constructors;
        // dynamic precedence favours the type reading over an index expression
        // holding an intrinsic call when both are live after `identifier [`
        primitive_type: ($) =>
            choice(
                "u8",
                "u16",
                "u32",
                "u64",
                "i8",
                "i16",
                "i32",
                "i64",
                "f32",
                "f64",
                "ptr",
            ),

        // ^type marks the value carried by a type as secret
        pointer_type: ($) => prec.left(seq("*", $._type)),

        // [N]type
        generic_type: ($) =>
            seq(
                field("name", choice($.identifier, $.type_identifier)),
                "[",
                sep1($._type, ","),
                optional(","),
                "]",
            ),

        // anonymous rec { ... } used as a type
        type_identifier: ($) => sep1($.identifier, "."),

        // 42, 0xFF, 0b1010, 0o77, 1_000_000, 42i64, 0xFFu32
        integer_literal: ($) =>
            token(
                choice(
                    seq(
                        "0",
                        choice("x", "X"),
                        /[0-9a-fA-F][0-9a-fA-F_]*/,
                        optional(INT_SUFFIX),
                    ),
                    seq(
                        "0",
                        choice("b", "B"),
                        /[01][01_]*/,
                        optional(INT_SUFFIX),
                    ),
                    seq(
                        "0",
                        choice("o", "O"),
                        /[0-7][0-7_]*/,
                        optional(INT_SUFFIX),
                    ),
                    seq(/[0-9][0-9_]*/, optional(INT_SUFFIX)),
                ),
            ),

        // 3.14, 1.0, 0.5e10, 1.5E-3, 1e0f32, 3.14f64; a fraction or an
        // exponent makes it a float
        char_literal: ($) =>
            token(
                seq(
                    "'",
                    choice(
                        /\\['"\\ntr0]/,
                        /\\x[0-9a-fA-F]{2}/,
                        /[^'\\]/,
                    ),
                    "'",
                ),
            ),

        // "..." with escapes \n \t \r \\ \' \" \0 \xNN; may span lines
        identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    },
});

// Comma-separated list of one or more items.
function sep1(rule, separator) {
    return seq(rule, repeat(seq(separator, rule)));
}
